# Model_Verification_LLMs

./: .gitignore  ANTHROPIC_DEBUG_GUIDE.md  API_CALL_COMPARISON.md  API_KEY_CONFIGURATION.md  API_KEY_FIX_SUMMARY.md  API_SERVER_SETUP.md  BATCH_OPTIMIZATION_IMPLEMENTATION.md  BATCH_OPTIMIZATION_SUMMARY.md  BEFORE_AFTER_OUTPUT_VISIBILITY.md  CACHED_CLAIMS_FEATURE.md  CLAIMS_185_196_SUMMARY.txt  CLAIMS_DASHBOARD_IMPLEMENTATION.md  CLAIM_EXTRACTION_DEBUG.md  CLAIM_EXTRACTION_TEST_RESULTS.md  CLAUDE_SONNET_4_5_UPGRADE.md  CODEACT_AGENT_HANG_FIX.md  CODEACT_FIX_SUMMARY.md  CODEACT_MODE_UPDATE.md  CONFIGURATION_COMPLETE.md  CONFIGURATION_COMPLETE.txt  CONTEXT_LENGTH_ISSUE.md  DASHBOARD_FEATURE_SUMMARY.md  DASHBOARD_QUICK_ACCESS.md  DASHBOARD_QUICK_START.md  DASHBOARD_RELOCATION_SUMMARY.md  DASHBOARD_SYNC_COMPLETE.md  DASHBOARD_SYNC_FIX.md  DASHBOARD_SYNC_SUMMARY.md  DASHBOARD_VISUAL_GUIDE.md  DEFAULT_CONFIGURATION.md  DELTA_VIEW_ARCHITECTURE.md  DELTA_VIEW_COMPLETE.md  DELTA_VIEW_IMPLEMENTATION.md  DELTA_VIEW_QUICK_START.md  DELTA_VIEW_README.md  DELTA_VIEW_SUMMARY.md  DELTA_VIEW_VISUAL_SUMMARY.md  DOCX_FIX_COMPLETE.md  DOCX_TOKEN_OPTIMIZATION.md  DRIFT_EXAMPLES_SUMMARY.md  (+76 more)
apps/web/: index.html  (+4 more)
services/codeact_cardcheck/: CODEACT_VERIFICATION.md  CODEACT_VS_RULES.md  INSTALL.md  INTEGRATION.md  LLM_INTEGRATION.md  README.md  SUMMARY.md  __init__.py  agent_main.py  api_server.py  example.py  pyproject.toml  start_api_server.sh  test_agent.py  test_anthropic.py  test_anthropic_debug.py  test_claim_extraction.py  test_openrouter.py
services/inspector/: main.py  pyproject.toml
(+130 files in other folders)
